feat:swagger for register
